--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
-    "shadcn-ui": "^0.8.0",
+    "shadcn-ui": "^0.2.3",
+    "sonner": "^1.4.41",
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
